--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,12 @@
     <!-- Splash Screen/Loader Styles -->
     <link rel="stylesheet" type="text/css" href="/loader.css" />
 
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/logo.png" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;1,400&display=swap"
       rel="stylesheet"
     />
-    <title>Hexawolf88 Dashboard</title>
+    <title>sychonix | EXPLORER</title>
   </head>
   <body>
     <noscript>
@@ -24,12 +24,8 @@
     </noscript>
     <div id="loading-bg">
       <div class="loading-logo">
-        <img src="/logo.svg" alt="Logo" width="80"/>
+        <img src="/logo.png" alt="Logo" width="80"/>
       </div>
-      <div class="loading">
-        <div class="effect-1 effects"></div>
-        <div class="effect-2 effects"></div>
-        <div class="effect-3 effects"></div>
       </div>
     </div>
     <div id="app"></div>
